--- a/src/locales/zh.json
+++ b/src/locales/zh.json
@@ -7,5 +7,6 @@
   "upload":"上传",
   "account upload":"账号上传",
   "item upload":"道具上传",
-  "pet upload":"宠物上传"
+  "pet upload":"宠物上传",
+  "title":"标题"
 }
