update batch task

--- a/src/locales/en.json
+++ b/src/locales/en.json
@@ -1,5 +1,6 @@
 {
   "projectName":"project",
   "search": "search",
-  "upload":"upload"
+  "upload":"upload",
+  "batch job maintenance":"batch job maintenance"
 }
